@@ -2,15 +2,18 @@ package br.com.jael.springcurso.springbootcurso.rest;
 
 import lombok.Getter;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class ApiErrors {
 
     @Getter
-    private List<String> errors;
+    private final List<String> errors;
 
     public ApiErrors(String mensagemErro) {
-        this.errors = Arrays.asList(mensagemErro);
+        this.errors = List.of(mensagemErro);
+    }
+
+    public ApiErrors(List<String> errors) {
+        this.errors = errors;
     }
 }
